--- a/.env
+++ b/.env
@@ -10,3 +10,6 @@ SECRET_KEY = 'django-insecure-e1--srl=zhfq)yw=r#!&@5u$65zna94t=nkefpefu-_x@qg(p_
 #         'PORT': '5432',
 #     }
 # }
+
+ALLOWED_HOST_LOCAL=localhost
+ALLOWED_HOST_RENDER=extractreportform.onrender.com
