--- a/.env
+++ b/.env
@@ -13,3 +13,4 @@ SECRET_KEY = 'django-insecure-e1--srl=zhfq)yw=r#!&@5u$65zna94t=nkefpefu-_x@qg(p_
 
 ALLOWED_HOST_LOCAL=localhost
 ALLOWED_HOST_RENDER=extractreportform.onrender.com
+DATABASE_URL=postgres://extract_report_5uyl_user:kfAp1z1kzP5PQcJVgpNMZWw6FMp9XXOP@dpg-cnvbk7q1hbls73bo4n60-a.oregon-postgres.render.com/extract_report_5uyl
