--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-SECRET_KEY = 'django-insecure-e1--srl=zhfq)yw=r#!&@5u$65zna94t=nkefpefu-_x@qg(p_'
-
+SECRET_KEY = 'fd0c36ec4ab8a3ff491b824a641ab113'
 # DATABASES = {
 #     'default': {
 #         'ENGINE': 'django.db.backends.postgresql',
@@ -10,7 +9,7 @@ SECRET_KEY = 'django-insecure-e1--srl=zhfq)yw=r#!&@5u$65zna94t=nkefpefu-_x@qg(p_
 #         'PORT': '5432',
 #     }
 # }
-
-ALLOWED_HOST_LOCAL=localhost
-ALLOWED_HOST_RENDER=extractreportform.onrender.com
-DATABASE_URL=postgres://extract_report_5uyl_user:kfAp1z1kzP5PQcJVgpNMZWw6FMp9XXOP@dpg-cnvbk7q1hbls73bo4n60-a.oregon-postgres.render.com/extract_report_5uyl
+DEBUG=True
+ALLOWED_HOST_LOCAL=localhost,127.0.0.1  # Comma-separated list of allowed local hosts
+ALLOWED_HOST_RENDER=your_render_domain.com  # Replace with your actual Render domain
+DATABASE_URL='postgres://extract_report_5uyl_user:kfAp1z1kzP5PQcJVgpNMZWw6FMp9XXOP@dpg-cnvbk7q1hbls73bo4n60-a.oregon-postgres.render.com/extract_report_5uyl'
