--- a/.env
+++ b/.env
@@ -10,6 +10,6 @@ SECRET_KEY = 'fd0c36ec4ab8a3ff491b824a641ab113'
 #     }
 # }
 DEBUG=True
-ALLOWED_HOST_LOCAL=localhost,127.0.0.1  # Comma-separated list of allowed local hosts
+ALLOWED_HOST_LOCAL=127.0.0.1  # Comma-separated list of allowed local hosts
 ALLOWED_HOST_RENDER=your_render_domain.com  # Replace with your actual Render domain
 DATABASE_URL='postgres://extract_report_5uyl_user:kfAp1z1kzP5PQcJVgpNMZWw6FMp9XXOP@dpg-cnvbk7q1hbls73bo4n60-a.oregon-postgres.render.com/extract_report_5uyl'
